docs/specs/design/0.11/000_INDEX.md
# Ori Design Specification

Welcome to the Ori language design documentation.  
This directory contains the official specification, structured into thematic sections.

---

## 📚 Table of Contents

### Core
- [001_Introduction](001_Introduction.md)
- [002_Language_Overview](002_Language_Overview.md)

### Syntax
- [Program Structure](syntax/010_ProgramStructure.md)
- [Lexical Elements](syntax/005_LexicalElements.md)
- [Literals](syntax/015_Literals.md)
- [Declarations](syntax/020_Declarations.md)
- [Variables](syntax/030_Variables.md)
- [Functions](syntax/040_Functions.md)
- [Types](syntax/050_Types.md)
- [Statements](syntax/060_Statements.md)
- [Expressions](syntax/070_Expressions.md)
- [Blocks](syntax/080_Blocks.md)
- [Modules and Imports](syntax/090_ModulesAndImports.md)
- [Syntax Summary](syntax/095_SyntaxSummary.md)
- [Comments](syntax/100_Comments.md)
- [Tokens And Operators](syntax/101_TokensAndOperators.md)

### Semantics
- [Slices](semantics/100_Slices.md)
- [Arrays](semantics/101_Arrays.md)
- [Maps](semantics/110_Maps.md)
- [HashMaps](semantics/111_HashMaps.md)
- [Strings](semantics/120_Strings.md)
- [Numeric Types](semantics/121_NumericTypes.md)
- [Structs](semantics/130_Structs.md)
- [Errors](semantics/140_Errors.md)
- [Types and Memory](semantics/150_TypesAndMemory.md)
- [Deterministic Destruction](semantics/215_DeterministicDestruction.md)
- [Control Flow](semantics/160_ControlFlow.md)
- [Methods And Interfaces](semantics/170_MethodsAndInterfaces.md)
- [Runtime And PanicHandling](semantics/180_RuntimeAndPanicHandling.md)
- [Concurrency](semantics/190_Concurrency.md)
- [Generic Types](semantics/200_GenericTypes.md)
- [Sum Types](semantics/210_SumTypes.md)
- [Deterministic Destruction](semantics/220_DeterministicDestruction.md)
- [Pattern Matching](semantics/240_PatternMatching.md)
- [Compile Time](semantics/250_Compiletime.md)
- [Container Ownership Model](semantics/260_ContainerOwnershipModel.md)
- [Modules And CompilationUnits - Phase 1](semantics/270_ModulesAndCompilationUnits_Phase1.md)
- [Modules And CompilationUnits - Phase 2](semantics/270_ModulesAndCompilationUnits_Phase2.md)
- [Compiler Directives And Keywords](semantics/280_CompilerDirectivesAndKeywords.md)
- [Foreign Function Interface](semantics/290_FFI.md)
- [Testing Framework - Phase 1](semantics/300_TestingFramework_Phase1.md)
- [Testing Framework - Phase 2](semantics/300_TestingFramework_Phase2.md)
- [Pointers](semantics/310_Pointers.md)
- [Blank Identifier](semantics/320_BlankIdentifier.md)
- [Build System And Compilation Pipeline](semantics/330_BuildSystemAndCompilationPipeline.md)
- [Build System And Compilation Pipeline - Phase 1](semantics/330_BuildSystemAndCompilationPipeline_Phase1.md)
- [Build System And Compilation Pipeline - Phase 2](semantics/330_BuildSystemAndCompilationPipeline_Phase2.md)
- [Compiletime Reflection](semantics/340_CompiletimeReflection.md)
- [Enums](semantics/350_Enums.md)
- [String Builder](semantics/360_StringBuilder.md)
- [File System And IO](semantics/370_FileSystemAndIO.md)
- [Logging Framework - Phase 1](semantics/380_LoggingFramework_Phase1.md)
- [UTF8 And Text Model](semantics/390_UTF8AndTextModel.md)
- [Executor And Tasks](semantics/400_ExecutorAndTasks_Phase2.md)

### Standard Library
- [Standard Library Foundations](ecosystem/001_StandardLibraryFoundations.md)
- [OS](ecosystem/001_OS.md)
- [Time](ecosystem/003_Time.md)
- [Core Packages Catalog](ecosystem/ecosystem/010_CorePackagesCatalog.md)

### Tooling
- [Compiler Diagnostics](tooling/001_CompilerDiagnostics.md)
- [LSP And Tooling](tooling/002_LSPAndTooling.md)

### Design Principles
- [Language Philosophy](design_principles/001_LanguagePhilosophy.md)
- [TypeSafety And Explicitness](design_principles/002_TypeSafetyAndExplicitness.md)
- [Error Handling Philosophy](design_principles/003_ErrorHandlingPhilosophy.md)
- [Runtime And Memory Philosophy](design_principles/004_RuntimeAndMemoryPhilosophy.md)
- [Concurrency And Predictability](design_principles/005_ConcurrencyAndPredictability.md)
- [Imports And Visibility](design_principles/006_ImportsAndVisibility.md)
- [Type System Philosophy](design_principles/007_TypeSystemPhilosophy.md)

### Appendix
- [Keywords](appendix/001_Keywords.md)
- [Builtins](appendix/002_Builtins.md)
- [Grammar Index](appendix/003_GrammarIndex.md)
- [Glossary](appendix/004_Glossary.md)

---


